test/FAIL/stepcmd/to_many_arguments/01_test_step.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

load boucle.o
step into 4
